<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">


    <TextView
        android:id="@+id/textView"
        android:layout_width="199dp"
        android:layout_height="55dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="104dp"
        android:layout_marginBottom="635dp"
        android:text="@string/welcome" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="106dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="575dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="typehere"
        android:inputType="number" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="236dp"
        android:layout_height="48dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="165dp"
        android:layout_marginBottom="569dp"
        android:text="@string/number" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="257dp"
        android:layout_height="182dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="149dp"
        android:layout_marginBottom="373dp"
        android:text="@string/kind" />

    <RadioGroup
        android:id="@+id/radiogroup1"
        android:layout_width="135dp"
        android:layout_height="177dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="376dp" >

        <RadioButton
            android:id="@+id/radioButton11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Trueorfalse" />

        <RadioButton
            android:id="@+id/radioButton12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/multiple" />

        <RadioButton
            android:id="@+id/radioButton13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Both" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="255dp"
        android:layout_height="173dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="149dp"
        android:layout_marginBottom="200dp"
        android:text="@string/difficulty" />

    <RadioGroup
        android:id="@+id/radiogroup2"
        android:layout_width="136dp"
        android:layout_height="169dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="197dp" >

        <RadioButton
            android:id="@+id/radioButton21"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hard" />

        <RadioButton
            android:id="@+id/radioButton22"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/medium" />

        <RadioButton
            android:id="@+id/radioButton23"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/easy" />
    </RadioGroup>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="88dp"
        android:text="Button" />

</RelativeLayout>